--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
 			<div class="quote-text">
 				<i class="fas fa-quote-left"></i>
 				<span id="quote"
-					>What you are is what u have been. What
-					you'll be is what you do now.</span
+					></span
 				>
 			</div>
 			<!-- Author -->
 			<div class="quote-author">
-				<span id="author">Buddha</span>
+				<span id="author"></span>
 			</div>
 			<!-- Buttons -->
 			<div class="button-container">
