--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
 				<button id="new-quote">New Quote</button>
 			</div>
 		</div>
+        <!-- Loader -->
+        <div class="loader" id="loader"></div>
 	</body>
+
+    
 </html>
